deployments/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  labels:
    app.service/type: gateway
  annotations:
    traefik.ingress.networking.io/router.entrypounts: web #website
spec:
  rules:
  - host: my.app.local
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: root-service
            port: 
              number: 80
      - pathType: Prefix
        path: /api
        backend:
          service:
            name: api-service
            port: 
              number: 80
      - pathType: Prefix
        path: /info
        backend:
          service:
            name: info-service
            port: 
              number: 80
      - pathType: Prefix
        path: /login
        backend:
          service:
            name: login-service
            port: 
              number: 80
